--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ body{
     background: #eee;
 }
 
+iframe {
+    border: 0px;
+    overflow: hidden;
+}
+
 /* DESKTOP CSS */
 
 /* HELPER CLASSES */
