--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ nav{
     height: 200px;
     background-color: #FFED92;
     position: absolute;
-    top: 200px;
+    top: 175px;
     right: 300px;
     border-radius: 10px;
 }
@@ -120,7 +120,7 @@ nav{
     height: 200px;
     background-color: #5DBA58;
     position: absolute;
-    top: 280px;
+    top: 260px;
     right: 200px;
     border-radius: 10px;
 }
@@ -302,12 +302,19 @@ footer{
     height: auto;
     width: 100%;
     color: #242424;
+    /* bottom: 0; */
 
     /* display: flex; */
 }
+
+#gallery-footer{
+    bottom: 0;
+    /* position: sticky; */
+    
+}
 .footer-content-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .footer-nav{
@@ -331,6 +338,33 @@ footer{
     color:#979797;
 }
 
+#gallery{
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 40px;
+}
+
+.gallery-container {
+    line-height:0;
+    -webkit-column-count:5;
+    -webkit-column-gap:5px; 
+    -moz-column-count:5;
+    -moz-column-gap:5px;
+    column-count:5;
+    column-gap:5px;
+ }
+
+ .gallery-container img {
+    width: 100% !important;
+    height: auto !important;
+    margin-bottom:5px;
+ }
+
+ .gallery-container img:hover {
+    scale: 105%;
+    transition: 1s;
+    cursor: pointer;
+ }
 
 
 /* Extra small devices (phones, 600px and down) */
@@ -442,54 +476,13 @@ footer{
         margin: 0;
     }
 
+
+    /* GALLARY PAGE */
+    .gallery-container {
+        -webkit-column-count:2;
+        -moz-column-count:2;
+        column-count:2;
+    }
+    
 }
 
-
-
-.gallery {
-    display: flex;
-    padding: 2px;
-    transition: 0.3s;
-  }
-  .gallery:hover .gallery__image {
-    filter: grayscale(1);
-  }
-  .gallery__column {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-  }
-  .gallery__link {
-    margin: 2px;
-    overflow: hidden;
-  }
-  .gallery__link:hover .gallery__image {
-    filter: grayscale(0);
-  }
-  .gallery__link:hover .gallery__caption {
-    opacity: 1;
-  }
-  .gallery__thumb {
-    position: relative;
-  }
-  .gallery__image {
-    display: block;
-    width: 100%;
-    transition: 0.3s;
-  }
-  .gallery__image:hover {
-    transform: scale(1.1);
-  }
-  .gallery__caption {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 25px 15px 15px;
-    width: 100%;
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
-    color: white;
-    opacity: 0;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
-    transition: 0.3s;
-  }
