--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,11 @@ footer{
         -moz-column-count:2;
         column-count:2;
     }
+
+    #gallery-footer{
+        position: sticky;
+
+    }
     
 }
 
